@@ -608,7 +608,7 @@ Interpreter::Interpreter()
     m_jsArrayVptr = jsArray->vptr();
     jsArray->~JSCell();
 
-    JSByteArray* jsByteArray = new (storage) JSByteArray(JSByteArray::VPtrStealingHack);
+    JSCell* jsByteArray = new (storage) JSByteArray(JSByteArray::VPtrStealingHack);
     m_jsByteArrayVptr = jsByteArray->vptr();
     jsByteArray->~JSCell();
 
