@@ -30,7 +30,7 @@ namespace JSC {
 
 PassRefPtr<ByteArray> ByteArray::create(size_t size)
 {
-    unsigned char* buffer = new unsigned char[size + sizeof(ByteArray)];
+    unsigned char* buffer = new unsigned char[size + sizeof(ByteArray) - sizeof(size_t)];
     ASSERT((reinterpret_cast<size_t>(buffer) & 3) == 0);
     return adoptRef(new (buffer) ByteArray(size));
 }
